--- a/lab2/py2-2019211308-2019211504-王乾凱.md
+++ b/lab2/py2-2019211308-2019211504-王乾凱.md
@@ -1,3 +1,23 @@
+# Python程序设计#2作业
+
+班级：2019XXXXXX
+
+学号：2019XXXXXX
+
+姓名：XXX
+
+## 作业题目
+
+数据文件（test.txt）是一个全球温度年度异常历史数据。基于Sanic实现一个查询服务，服务包括：
+
+* 按起始和结束年份查询历史数据，查询结果支持多种格式：JSON、XML、CSV（用逗号作为间隔符）。
+* 按温度高低进行排序，支持升序和降序两种排序方式。
+
+## 作业内容
+
+程序源代码嵌入下方的code block中。
+
+```python
 from sanic import Sanic 
 from sanic.response import json
 from sanic.response import text
@@ -61,3 +81,9 @@ if __name__ == '__main__':
     Dao()
     app.run(host='0.0.0.0', port=1337)
     # test_dao(2001, 2005)
+
+```
+
+## 代码说明
+
+源代码中不要出现大段的说明注释，代码说明在本节描述。
