--- a/lab2/py2-2019211308-2019211504-王乾凱.md
+++ b/lab2/py2-2019211308-2019211504-王乾凱.md
@@ -1,10 +1,10 @@
 # Python程序设计#2作业
 
-班级：2019XXXXXX
+班级：2019211308
 
-学号：2019XXXXXX
+学号：2019211504
 
-姓名：XXX
+姓名：王乾凱
 
 ## 作业题目
 
@@ -86,4 +86,7 @@ if __name__ == '__main__':
 
 ## 代码说明
 
-源代码中不要出现大段的说明注释，代码说明在本节描述。
+web应用设置的host是0.0.0.0，监视端口是1337，路由为“/host”，若无路由参数，则按年份正序排序， 从1880年到2010年的数据，默认返回数据类型为json。
+
+参数参考：
+url?{beginYear=(beginYear:int(1880~2020))}&{endYear:int(1880-2020)}&{form=(form:str('json'/'xml'/'csv'))}&{reverse=('true'/'false')}&{key:str}
