change lab2 doc

--- a/lab2/py2-2019211308-2019211504-王乾凱.md
+++ b/lab2/py2-2019211308-2019211504-王乾凱.md
@@ -34,12 +34,14 @@ data = []
 def Dao():
     with open("test.txt", "r") as f:
         line = f.readline()
+        startTem:float = 0
         while line:
             if line[0] == '#':
                 line = f.readline()
                 continue
             items = line.strip().split()
-            dic_items = {'Year': int(items[0]), 'No_Smoothing': float(items[1]), 'Lowess': float(items[2])}
+            dic_items = {'Year': int(items[0]), 'Temperature': float(items[1]) + startTem}
+            startTem = float(items[1]) + startTem
             data.append(dic_items)
             line = f.readline()
     pass
@@ -81,7 +83,6 @@ if __name__ == '__main__':
     Dao()
     app.run(host='0.0.0.0', port=1337)
     # test_dao(2001, 2005)
-
 ```
 
 ## 代码说明
