--- a/lab2/py2-2019211308-2019211504-王乾凱.md
+++ b/lab2/py2-2019211308-2019211504-王乾凱.md
@@ -87,7 +87,7 @@ if __name__ == '__main__':
 
 ## 代码说明
 
-web应用设置的host是0.0.0.0，监视端口是1337，路由为“/host”，若无路由参数，则按年份正序排序， 从1880年到2010年的数据，默认返回数据类型为json。
+web应用设置的host是0.0.0.0，监视端口是1337，路由为“/data”，若无路由参数，则按年份正序排序， 从1880年到2010年的数据，默认返回数据类型为json。
 
 参数参考：
 url?{beginYear=(beginYear:int(1880~2020))}&{endYear:int(1880-2020)}&{form=(form:str('json'/'xml'/'csv'))}&{reverse=('true'/'false')}&{key:str}
