--- a/lab2/py2-2019211308-2019211504-王乾凱.md
+++ b/lab2/py2-2019211308-2019211504-王乾凱.md
@@ -34,14 +34,12 @@ data = []
 def Dao():
     with open("test.txt", "r") as f:
         line = f.readline()
-        startTem:float = 0
         while line:
             if line[0] == '#':
                 line = f.readline()
                 continue
             items = line.strip().split()
-            dic_items = {'Year': int(items[0]), 'Temperature': float(items[1]) + startTem}
-            startTem = float(items[1]) + startTem
+            dic_items = {'Year': int(items[0]), 'Temperature': float(items[1])}
             data.append(dic_items)
             line = f.readline()
     pass
