--- a/lab2/py2-2019211308-2019211504-王乾凱.md
+++ b/lab2/py2-2019211308-2019211504-王乾凱.md
@@ -89,3 +89,9 @@ web应用设置的host是0.0.0.0，监视端口是1337，路由为“/data”，
 
 参数参考：
 url?{beginYear=(beginYear:int(1880~2020))}&{endYear:int(1880-2020)}&{form=(form:str('json'/'xml'/'csv'))}&{reverse=('true'/'false')}&{key:str}
+
+## 运行截图
+
+![screen1](screenshot/screenshot1.png)
+
+![](screenshot/screenshot2.png)
