--- a/lab5/py5-2019211308-2019211504-王乾凱.md
+++ b/lab5/py5-2019211308-2019211504-王乾凱.md
@@ -23,12 +23,6 @@ import matplotlib.pyplot as plt
 import numpy as np
 import statsmodels.api as sm
 
-async def getGraph(x:np.ndarray, y:np.ndarray):
-    # plt.scatter(x, y)
-    plt.plot(x, y)
-    pass
-
-
 async def process(X:np.ndarray, Y:np.ndarray):
     lowess = sm.nonparametric.lowess
     n = np.size(X, 0);
@@ -54,8 +48,12 @@ async def main(params):
                 z = await process(np.array(x), np.array(y))
                 for a, b, c in zip(x, y, z):
                     print(a, b, round(c, 2))
-                await getGraph(x, y)
-                await getGraph(x, z)
+                
+                plt.xlabel("YEAR")
+                plt.ylabel("Temperature Index (C)")
+                plt.plot(x, y, "o:", color='grey', label="No_Smoothing")
+                plt.plot(x, z, "k", label="Lowess(5)")
+                plt.legend()
                 plt.savefig('./test.jpg', dpi=200)
 
             else:
@@ -82,6 +80,7 @@ def test():
 
 loop = asyncio.get_event_loop()
 loop.run_until_complete(main(test()))
+
 
 ```
 
